make username in users table nullable. login and signup endpoints.
